tests/snapshots/render_snapshots__chat-120x30.snap
---
source: tests/render_snapshots.rs
expression: "render_snapshot(&store, &mut cache, 120, 30, 0)"
---
"                                                                                                                        "
"  Check this out:                                                                                                       "
"                                                                                                                        "
"  fn main() {                                                                                                           "
"      println!("hi");                                                                                                   "
"  }                                                                                                                     "
"                                                                                                                        "
"  | a | b |                                                                                                             "
"  |───|───|                                                                                                             "
"  | 1 | 2 |                                                                                                             "
"  stale fresh                                                                                                           "
"                                                                                                                        "
"  ▸ [tool] read_file                                                                                                    "
"                                                                                                                        "
"  ▾ Think                                                                                                               "
"  Hello world                                                                                                           "
"  thinking                                                                                                              "
"                                                                                                                        "
"  [compacted 1 messages]                                                                                                "
"                                                                                                                        "
"  summarized content                                                                                                    "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
