tests/snapshots/render_snapshots__chat-60x15.snap
---
source: tests/render_snapshots.rs
expression: "render_snapshot(&store, &mut cache, 60, 15, 0)"
---
"                                                            "
"  Check this out:                                          █"
"                                                           █"
"  fn main() {                                              █"
"      println!("hi");                                      █"
"  }                                                        █"
"                                                           ║"
"  | a | b |                                                ║"
"  |───|───|                                                ║"
"  | 1 | 2 |                                                ║"
"  stale fresh                                              ║"
"                                                           ║"
"  ▸ [tool] read_file                                       ║"
"                                                           ║"
"  Hello world                                               "
