tests/snapshots/render_snapshots__chat-offset-2.snap
---
source: tests/render_snapshots.rs
expression: "render_snapshot(&store, &mut cache, 120, 30, 2)"
---
"                                                                                                                        "
"  fn main() {                                                                                                           "
"      println!("hi");                                                                                                   "
"  }                                                                                                                     "
"                                                                                                                        "
"  | a | b |                                                                                                             "
"  |───|───|                                                                                                             "
"  | 1 | 2 |                                                                                                             "
"  stale fresh                                                                                                           "
"                                                                                                                        "
"  ▸ [tool] read_file                                                                                                    "
"                                                                                                                        "
"  Hello world                                                                                                           "
"  thinking                                                                                                              "
"                                                                                                                        "
"  [compacted 1 messages]                                                                                                "
"                                                                                                                        "
"  summarized content                                                                                                    "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
