tests/snapshots/render_snapshots__chat-tool-collapsed.snap
---
source: tests/render_snapshots.rs
expression: snapshot
---
"                                                                                                                        "
"  Check this out:                                                                                                       "
"                                                                                                                        "
"  fn main() {                                                                                                           "
"      println!("hi");                                                                                                   "
"  }                                                                                                                     "
"                                                                                                                        "
"  | a | b |                                                                                                             "
"  |───|───|                                                                                                             "
"  | 1 | 2 |                                                                                                             "
"  stale fresh                                                                                                           "
"                                                                                                                        "
"  ▸ [tool] read_file                                                                                                    "
"                                                                                                                        "
"  ▾ Think                                                                                                               "
"  Hello world                                                                                                           "
"  thinking                                                                                                              "
"                                                                                                                        "
"  [compacted 1 messages]                                                                                                "
"                                                                                                                        "
"  summarized content                                                                                                    "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
